--- a/index.html
+++ b/index.html
@@ -31,30 +31,30 @@
 
             <div class="images">
                 <div class="slider">
-                    <div class="slide active"><img src="images/automne.webp" alt="automne 1" style="width:100%; height:100%; object-fit: cover;"></div>
-                    <div class="slide"><img src="images/automne 2.webp" alt="automne 2" style="width:100%; height:100%; object-fit: cover;"></div>
-                    <div class="slide"><img src="images/automne 3.webp" alt="automne 3" style="width:100%; height:100%; object-fit: cover;"></div>
+                    <div class="slide active"><img src="images/automne.webp" alt="automne 1" class="responsive-image"></div>
+                    <div class="slide"><img src="images/automne 2.webp" alt="automne 2" class="responsive-image"></div>
+                    <div class="slide"><img src="images/automne 3.webp" alt="automne 3" class="responsive-image"></div>
                     <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
                     <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
                 </div>
                 <div class="slider">
-                    <div class="slide active"><img src="images/printemps.jpeg" alt="printemps 1" style="width:100%; height:100%; object-fit: cover;"></div>
-                    <div class="slide"><img src="images/printemps 2.webp" alt="printemps 2" style="width:100%; height:100%; object-fit: cover;"></div>
-                    <div class="slide"><img src="images/printemps 3.webp" alt="printemps 3" style="width:100%; height:100%; object-fit: cover;"></div>
+                    <div class="slide active"><img src="images/printemps.jpeg" alt="printemps 1" class="responsive-image"></div>
+                    <div class="slide"><img src="images/printemps 2.webp" alt="printemps 2" class="responsive-image"></div>
+                    <div class="slide"><img src="images/printemps 3.webp" alt="printemps 3" class="responsive-image"></div>
                     <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
                     <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
                 </div>
                 <div class="slider">
-                    <div class="slide active"><img src="images/hiver.jpeg" alt="hiver 1" style="width:100%; height:100%; object-fit: cover;"></div>
-                    <div class="slide"><img src="images/hiver 2.webp" alt="hiver 2" style="width:100%; height:100%; object-fit: cover;"></div>
-                    <div class="slide"><img src="images/hiver 3.webp" alt="hiver 3" style="width:100%; height:100%; object-fit: cover;"></div>
+                    <div class="slide active"><img src="images/hiver.jpeg" alt="hiver 1" class="responsive-image"></div>
+                    <div class="slide"><img src="images/hiver 2.webp" alt="hiver 2" class="responsive-image"></div>
+                    <div class="slide"><img src="images/hiver 3.webp" alt="hiver 3" class="responsive-image"></div>
                     <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
                     <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
                 </div>
                 <div class="slider">
-                    <div class="slide active"><img src="images/ete.jpeg" alt="été 1" style="width:100%; height:100%; object-fit: cover;"></div>
-                    <div class="slide"><img src="images/été 2..avif" alt="été 2" style="width:100%; height:100%; object-fit: cover;"></div>
-                    <div class="slide"><img src="images/été 3.avif" alt="été 3" style="width:100%; height:100%; object-fit: cover;"></div>
+                    <div class="slide active"><img src="images/ete.jpeg" alt="été 1" class="responsive-image"></div>
+                    <div class="slide"><img src="images/été 2..avif" alt="été 2" class="responsive-image"></div>
+                    <div class="slide"><img src="images/été 3.avif" alt="été 3" class="responsive-image"></div>
                     <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
                     <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
                 </div>
@@ -63,7 +63,7 @@
 
 
         <!-- Section Exposition -->
-        <section id="exposition" class="content-section" style="display: none;">
+        <section id="exposition" class="content-section hidden">
             <h1>Exposition en cours</h1>
             <p>De la fraîcheur du printemps aux teintes chaleureuses et apaisantes de l'été, 
             en passant par les palettes dorées de l'automne et les paysages oniriques de l'hiver, plongez dans les couleurs de votre saison préférée !</p>
@@ -75,60 +75,76 @@
                 <div class="row">
                     <div class="image-container">
                         <img src="images/automne4.webp" alt="Photo 1">
-                            <div class="image-description">Description de l'image 1</div>
+                            <div class="image-description">Ferme près de Duivendrecht</div>
                     </div>
                     <div class="image-container">
                         <img src="images/automne5.webp" alt="Photo 2">
-                            <div class="image-description">Description de l'image 2</div>
+                            <div class="image-description">Les Quatres Saisons, Automne</div>
                     </div>
                     <div class="image-container">
                         <img src="images/automne6.webp" alt="Photo 3">
-                            <div class="image-description">Description de l'image 3</div>
+                            <div class="image-description">Nature morte aux fruits</div>
                     </div>
                     <div class="image-container">
                         <img src="images/automne7.webp" alt="Photo 4">
-                            <div class="image-description">Description de l'image 4</div>
+                            <div class="image-description">Automne</div>
                     </div>
 
                 </div>
                 <div class="row">
                     <div class="image-container">
                         <img src="images/hiver 4.webp" alt="Photo 5">
-                            <div class="image-description">Description de l'image 4</div>
+                            <div class="image-description">Effets de neige à Argenteuil</div>
                     </div>
                     <div class="image-container">
                         <img src="images/hiver 5.webp" alt="Photo 6">
-                            <div class="image-description">Description de l'image 4</div>
+                            <div class="image-description">Paysage hivernal avec église</div>
                     </div>
                     <div class="image-container">
                         <img src="images/hiver 6.webp" alt="Photo 7">
-                            <div class="image-description">Description de l'image 4</div>
+                            <div class="image-description">La Remise des chevreuils en hiver</div>
                     </div>
                     <div class="image-container">
                         <img src="images/hiver 7.webp" alt="Photo 8">
-                            <div class="image-description">Description de l'image 4</div>
+                            <div class="image-description">La Neige</div>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="image-container">
                         <img src="images/printemps 4.webp" alt="Photo 9">
-                            <div class="image-description">Description de l'image 4</div>
+                            <div class="image-description">Printemps sacré</div>
                     </div>
-
-                    <img src="images/printemps 5.webp" alt="Photo 10">
-                    <div class="image-description">Description de l'image 4</div>
-                    <img src="images/printemps 2.webp" alt="Photo 11">
-                    <div class="image-description">Description de l'image 4</div>
-                    <img src="images/printemps 3.webp" alt="Photo 12">
-                    <div class="image-description">Description de l'image 4</div>
+                    <div class="image-container">
+                        <img src="images/printemps 5.webp" alt="Photo 10">
+                            <div class="image-description">Amandier en fleur</div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/printemps 2.webp" alt="Photo 11">
+                            <div class="image-description">La liseuse</div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/printemps 3.webp" alt="Photo 12">
+                            <div class="image-description">Le jardin à Bougival</div>
+                    </div>
                 </div>
-                
                 <div class="row">
-                    <img src="images/été 4.avif" alt="Photo 13">
-                    <img src="images/été 5.avif" alt="Photo 14">
-                    <img src="images/été 6.avif" alt="Photo 15">
-                    <img src="images/été 4.avif" alt="Photo 16">
+                    <div class="image-container">
+                        <img src="images/été 4.avif" alt="Photo 13">
+                            <div class="image-description">Children on the beach</div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/été 5.avif" alt="Photo 14">
+                            <div class="image-description">Le déjeuné sur l'herbe</div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/été 6.avif" alt="Photo 15">
+                            <div class="image-description">La comptesse</div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/été 2..avif" alt="Photo 16">
+                            <div class="image-description">Deux jeunes filles assises au lac de Starnberg</div>
+                    </div>
             </div>  
             <p>et bien plus encore !
             <br>Une expérience à ne pas manquer, pour petits et grands, qui vous reconnectera à la beauté de la nature au fil des saisons.</p>          
@@ -136,14 +152,14 @@
 
 
         <!-- Section Boutique -->
-        <section id="boutique" class="content-section" style="display: none;">
+        <section id="boutique" class="content-section hidden">
             <h1>Boutique</h1>
             <p>Contenu de la section boutique...</p>
         </section>
 
 
         <!-- Section Contact -->
-        <section id="contact" class="content-section" style="display: none;">
+        <section id="contact" class="content-section hidden">
             <h1>Contact</h1>
             <div class="contact-container">
                 <div class="contact-left">
