--- a/index.html
+++ b/index.html
@@ -207,6 +207,6 @@
         </div>
     </footer>
 
-    <script src="javascript.java"></script>
+    <script src="java.script.js"></script>
 </body>
 </html>
