--- a/index.html
+++ b/index.html
@@ -29,38 +29,52 @@
                 <img src="images/tendre.solitude.img2.jpg" alt="Image description">
             </div>
 
-            <div class="images">
-                <div class="slider">
-                    <div class="slide active"><img src="images/automne.webp" alt="automne 1" class="responsive-image"></div>
-                    <div class="slide"><img src="images/automne 2.webp" alt="automne 2" class="responsive-image"></div>
-                    <div class="slide"><img src="images/automne 3.webp" alt="automne 3" class="responsive-image"></div>
-                    <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
-                    <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
+            <div class="images-grid">
+                <div class="slider-container">
+                    <div class="slider">
+                        <div class="slide active"><img src="images/automne.webp" alt="automne 1" class="responsive-image"></div>
+                        <div class="slide"><img src="images/automne 2.webp" alt="automne 2" class="responsive-image"></div>
+                        <div class="slide"><img src="images/automne 3.webp" alt="automne 3" class="responsive-image"></div>
+                        <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
+                        <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
+                    </div>
+                    <p class="slider-description">l'automne.</p>
                 </div>
-                <div class="slider">
-                    <div class="slide active"><img src="images/printemps.jpeg" alt="printemps 1" class="responsive-image"></div>
-                    <div class="slide"><img src="images/printemps 2.webp" alt="printemps 2" class="responsive-image"></div>
-                    <div class="slide"><img src="images/printemps 3.webp" alt="printemps 3" class="responsive-image"></div>
-                    <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
-                    <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
+
+                <div class="slider-container">
+                    <div class="slider">
+                        <div class="slide active"><img src="images/printemps.jpeg" alt="printemps 1" class="responsive-image"></div>
+                        <div class="slide"><img src="images/printemps 2.webp" alt="printemps 2" class="responsive-image"></div>
+                        <div class="slide"><img src="images/printemps 3.webp" alt="printemps 3" class="responsive-image"></div>
+                        <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
+                        <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
+                    </div>
+                    <p class="slider-description">le printemps.</p>
                 </div>
-                <div class="slider">
-                    <div class="slide active"><img src="images/hiver.jpeg" alt="hiver 1" class="responsive-image"></div>
-                    <div class="slide"><img src="images/hiver 2.webp" alt="hiver 2" class="responsive-image"></div>
-                    <div class="slide"><img src="images/hiver 3.webp" alt="hiver 3" class="responsive-image"></div>
-                    <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
-                    <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
+
+                <div class="slider-container">
+                    <div class="slider">
+                        <div class="slide active"><img src="images/hiver.jpeg" alt="hiver 1" class="responsive-image"></div>
+                        <div class="slide"><img src="images/hiver 2.webp" alt="hiver 2" class="responsive-image"></div>
+                        <div class="slide"><img src="images/hiver 3.webp" alt="hiver 3" class="responsive-image"></div>
+                        <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
+                        <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
+                    </div>
+                    <p class="slider-description">l'hiver.</p>
                 </div>
-                <div class="slider">
-                    <div class="slide active"><img src="images/ete.jpeg" alt="été 1" class="responsive-image"></div>
-                    <div class="slide"><img src="images/été 2..avif" alt="été 2" class="responsive-image"></div>
-                    <div class="slide"><img src="images/été 3.avif" alt="été 3" class="responsive-image"></div>
-                    <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
-                    <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
+
+                <div class="slider-container">
+                    <div class="slider">
+                        <div class="slide active"><img src="images/ete.jpeg" alt="été 1" class="responsive-image"></div>
+                        <div class="slide"><img src="images/été 2..avif" alt="été 2" class="responsive-image"></div>
+                        <div class="slide"><img src="images/été 3.avif" alt="été 3" class="responsive-image"></div>
+                        <button class="button prev" onclick="moveSlide(this, -1)">&#10094;</button>
+                        <button class="button next" onclick="moveSlide(this, 1)">&#10095;</button>
+                    </div>
+                    <p class="slider-description">l'été.</p>
                 </div>
             </div>
         </section>
-
 
         <!-- Section Exposition -->
         <section id="exposition" class="content-section hidden">
