--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <a onclick="showSection('exposition')">Exposition</a>
                 <a onclick="showSection('boutique')">Boutique</a>
                 <a onclick="showSection('contact')">Contact</a>
-            </nav>
         </header>
 
 
@@ -75,6 +74,7 @@
                 </div>
             </div>
         </section>
+
 
         <!-- Section Exposition -->
         <section id="exposition" class="content-section hidden">
@@ -168,7 +168,20 @@
         <!-- Section Boutique -->
         <section id="boutique" class="content-section hidden">
             <h1>Boutique</h1>
-            <p>Contenu de la section boutique...</p>
+            <div class="product-grid">
+                <div class="product">
+                    <img src="boutique/sweat.png" alt="Produit 1">
+                    <p class="product-description">Sweatshirt - 29.99.€</p>
+                </div>
+                <div class="product">
+                    <img src="boutique/teeshirt.png" alt="Produit 2">
+                    <p class="product-description">Tee-shirt - 17.99€.</p>
+                </div>
+                <div class="product">
+                    <img src="boutique/totebag.png" alt="Produit 3">
+                    <p class="product-description">ToteBag - 19.99€.</p>
+                </div>
+            </div>
         </section>
 
 
@@ -208,16 +221,16 @@
     <!-- Footer -->
     <footer>
         <div class="footer-logos">
-            <img src="logo/LinkedIn.svg" alt="Logo 1">
-            <img src="logo/Logo Instagram.svg" alt="Logo 2">
-            <img src="logo/Logo YouTube.svg" alt="Logo 3">
-            <img src="logo/X Logo.svg" alt="Logo 4">
+            <img src="logo/LinkedIn.svg" alt="Logo LinkedIn">
+            <img src="logo/Logo Instagram.svg" alt="Logo Instagram">
+            <img src="logo/Logo YouTube.svg" alt="Logo YouTube">
+            <img src="logo/X Logo.svg" alt="Logo X">
         </div>
 
         <div class="newsletter">
-            <h3>Abonnez-vous à notre newsletter</h3>
+            <h3>S'inscrire à la Newsletter</h3>
             <input type="email" placeholder="Entrez votre email" required>
-            <button type="submit">S'abonner</button>
+            <button type="submit">Sign up</button>
         </div>
     </footer>
 
