--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
             <h1>Boutique</h1>
             <div class="product-grid">
                 <div class="product">
-                    <img src="boutique/sweat.png" alt="Produit 1">
+                    <img src="images/sweat.png" alt="Produit 1">
                     <p class="product-description">Sweatshirt - 29.99.€</p>
                 </div>
                 <div class="product">
-                    <img src="boutique/teeshirt.png" alt="Produit 2">
+                    <img src="images/teeshirt.png" alt="Produit 2">
                     <p class="product-description">Tee-shirt - 17.99€.</p>
                 </div>
                 <div class="product">
-                    <img src="boutique/totebag.png" alt="Produit 3">
+                    <img src="images/totebag.png" alt="Produit 3">
                     <p class="product-description">ToteBag - 19.99€.</p>
                 </div>
             </div>
